--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,18 @@
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 body {
-  margin: 0;
   font-family: "Roboto", sans-serif;
   color: #fff;
+
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 canvas#threeJS {
   position: fixed;
@@ -20,7 +31,7 @@ canvas#threeJS {
 .logo > .logo-wrapper {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 50px 10px;
+  padding: 20px;
 
   display: flex;
   justify-content: center;
@@ -37,10 +48,14 @@ main {
   transition: all 0.45s ease-in;
 }
 
+body.active {
+  overflow-y: auto;
+}
 body.active > .logo {
   transform: translateY(0);
   top: 0;
   left: 0;
+  background: #000000d1;
 }
 body.active > .logo > .logo-wrapper {
   justify-content: flex-start;
@@ -58,6 +73,14 @@ section {
   margin: 0 auto;
   padding: 50px 10px;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 h1 {
   margin: 0;
   padding: 0 0 24px;
@@ -65,15 +88,38 @@ h1 {
   font-size: 3.125rem;
   line-height: 65px;
 }
+h3 {
+  font-size: 34px;
+}
 p {
   margin: 0;
-  color: #edcabb;
+  color: #ffe9e0;
+}
+a {
+  color: #ffe9e0;
 }
 
 .hero > .hero-wrapper {
   padding: 200px 0;
-  max-width: 820px;
+  max-width: 900px;
 }
 .hero > .hero-wrapper > p {
   font-size: 28px;
+}
+
+.location > .location-wrapper {
+  padding: 200px 0;
+}
+.location > .location-wrapper > h3 {
+  margin-bottom: 56px;
+  background: #000000d1;
+}
+.location > .location-wrapper > .icon {
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.location > .location-wrapper > .icon > svg {
+  height: 100px;
 }
