--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 html {
   -ms-overflow-style: none;
   scrollbar-width: none;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 ::-webkit-scrollbar {
   display: none;
